--- a/BE/ohouse/src/main/resources/application.properties
+++ b/BE/ohouse/src/main/resources/application.properties
@@ -4,7 +4,7 @@
 #spring.datasource.username=scott
 #spring.datasource.password=tiger
 
-#h2 console ??? ? ?? ??
+#h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.datasource.url=jdbc:h2:mem:testdb
@@ -12,7 +12,21 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+# database init
 spring.sql.init.mode=always
 
+#mybatis
 mybatis.mapper-locations=/mapper/**/*.xml
 mybatis.type-aliases-package= com.clone.ohouse.domain
+
+#Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=bungle.master01@gmail.com
+spring.mail.password=vslepxljztmvmfkv
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required= true
+spring.mail.properties.mail.smtp.connectiontimeout= 5000
+spring.mail.properties.mail.smtp.timeout= 5000
+spring.mail.properties.mail.smtp.writetimeout= 5000
