feat. login Auth

--- a/BE/ohouse/src/main/resources/application.properties
+++ b/BE/ohouse/src/main/resources/application.properties
@@ -18,6 +18,7 @@ spring.sql.init.mode=always
 #mybatis
 mybatis.mapper-locations=/mapper/**/*.xml
 mybatis.type-aliases-package= com.clone.ohouse.domain
+mybatis.configuration.map-underscore-to-camel-case=true
 
 #Mail
 spring.mail.host=smtp.gmail.com
@@ -33,3 +34,6 @@ spring.mail.properties.mail.smtp.writetimeout= 5000
 
 #Jwt
 secretKey=secretkeysecretkeysecretkeysecretkeysecretkey
+
+#security
+spring.security.user.password=security
